# darr

./: .gitignore  CMakeLists.txt  Makefile.am  README.md  configure.ac
src/: CMakeLists.txt  darr.c  darr.h
src/tests/: access-element.c  append.c  begin-end.c  const.c  copy-modify.c  copy-resize.c  copy-slice.c  copy.c  correct-allocation-size.c  correct-element-size.c  empty.c  extract.c  first-last.c  init-state.c  insert.c  move-slice.c  move.c  prepend.c  remove.c  resize-zero.c  resize.c  set.c  shift-boundary.c  shift-slice.c  shift.c  shrink-grow.c  slice.c  swap.c
tests/: CMakeLists.txt  access-element.c  append.c  begin-end.c  const.c  copy-modify.c  copy-resize.c  copy-slice.c  copy.c  correct-allocation-size.c  correct-element-size.c  empty.c  first-last.c  init-state.c  insert.c  move-slice.c  move.c  prepend.c  remove.c  resize-zero.c  resize.c  shift-boundary.c  shift-slice.c  shift.c  shrink-grow.c  swap.c
tests/cmake-external-subdirectory/: CMakeLists.txt  main.c  run
