function(test_single_c_file target)
    add_executable(${target} ${target}.c)
    target_link_libraries(${target} darr)
    add_test(NAME ${target} COMMAND ${target})
endfunction(test_single_c_file)

test_single_c_file(access-element)
test_single_c_file(append)
test_single_c_file(begin-end)
test_single_c_file(const)
test_single_c_file(copy-modify)
test_single_c_file(copy-resize)
test_single_c_file(copy-slice)
test_single_c_file(copy)
test_single_c_file(correct-allocation-size)
test_single_c_file(correct-element-size)
test_single_c_file(empty)
test_single_c_file(first-last)
test_single_c_file(init-state)
test_single_c_file(insert)
test_single_c_file(move-slice)
test_single_c_file(move)
test_single_c_file(prepend)
test_single_c_file(remove)
test_single_c_file(resize-zero)
test_single_c_file(resize)
test_single_c_file(shift-boundary)
test_single_c_file(shift-slice)
test_single_c_file(shift)
test_single_c_file(shrink-grow)
test_single_c_file(swap)

add_test(NAME cmake-external-subdirectory COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/cmake-external-subdirectory/run)
